# auto-rag-vs-basic

./: .gitignore  ingest.py  pyproject.toml  readme.md
auto-rag/: notebook.ipynb
