[project]
name = "auto-rag-vs-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "raganything (>=1.2.9,<2.0.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "docling (>=2.72.0,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
